swaggerの更新＋挙動の修正
