# app/docs/swagger.json
@@ -282,6 +282,40 @@
                 }
             }
         },
+        "/limited_recipes": {
+            "patch": {
+                "description": "レシピを非公開状態にする",
+                "tags": [
+                    "recipes"
+                ],
+                "summary": "レシピの非公開状態にする",
+                "parameters": [
+                    {
+                        "description": "レシピのWatchID",
+                        "name": "watch_id",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/product.LimitedRecipeRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.H"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.H"
+                        }
+                    }
+                }
+            }
+        },
         "/me": {
             "get": {
                 "description": "ユーザー情報の取得のエンドポイント",
@@ -794,8 +828,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "レシピのPK",
-                        "name": "id",
+                        "description": "レシピのWatchID",
+                        "name": "watch_id",
                         "in": "path",
                         "required": true
                     }
@@ -1531,6 +1565,9 @@
                 "is_draft": {
                     "type": "boolean"
                 },
+                "is_limited": {
+                    "type": "boolean"
+                },
                 "servings": {
                     "type": "integer"
                 },
@@ -1539,6 +1576,9 @@
                 },
                 "user": {
                     "$ref": "#/definitions/domain.UsersForGet"
+                },
+                "watch_id": {
+                    "type": "string"
                 }
             }
         },
@@ -1667,6 +1707,14 @@
             "properties": {
                 "login_url": {
                     "type": "string"
+                }
+            }
+        },
+        "product.LimitedRecipeRequest": {
+            "type": "object",
+            "properties": {
+                "recipe_id": {
+                    "type": "integer"
                 }
             }
         },
